docs: Kotlin 프로퍼티와 접근 제어자